# VulkanPlaygoround

./: .gitignore  CMakeLists.txt  main.cpp
assets/: CMakeLists.txt
assets/shaders/: trig.frag  trig.vert
src/: CMakeLists.txt
src/AssetsManager/: OneTimeCommand.cpp  OneTimeCommand.hpp  ShaderModule.cpp  ShaderModule.hpp  TextureModule.cpp  TextureModule.hpp  Vertex.hpp
src/BaseEngine/: BaseEngine.cpp  BaseEngine.hpp  ChosenGPU.cpp  Debug.cpp  Debug.hpp  DefaultPipeline.cpp  ImgSyncer.hpp  Presenter.cpp  Presenter.hpp  Scene.cpp  Scene.hpp  vookoo.hpp
